--- a/html-assignment/CSS/main.css
+++ b/html-assignment/CSS/main.css
@@ -3,6 +3,38 @@ body{
 }
 
 header,footer{
-    background-color: cornflowerblue;
+    background-color:cornflowerblue;
 }
 
+
+
+.site-title{
+   color:burlywood;
+}
+
+.myself{
+    box-shadow: 0px 0px 2px 1px black;
+    
+}
+
+.hobbybox{
+    list-style-type: square;
+}
+
+.hobbybox li:nth-child(odd){
+     
+        background-color:rgb(171, 238, 255);
+      
+}
+
+nav a{
+    text-decoration: none ; 
+    background-color: #06f355;
+    border: 1px solid #210202;
+    
+}
+
+nav a:hover, nav a:focus {
+    background-color: #4f16e0; 
+    
+  }
